5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1785_1601.log
== SUBMITION (2019-05-30 10:31:47) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: ")))

i = 0
s = 0
k = 0

while()
-- EXECUTION TIME:
0.141838
-- ERROR:
  File "/home/codebench/codes/1785/1601/main.py", line 9
    while()
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:48) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: ")))

i = 0
s = 0
k = 0

while()
-- ERROR:
File "XXXX", line 9
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
